Added Color inversion

--- a/OpenCVCudaTests/OpenCVCudaTests.vcxproj
+++ b/OpenCVCudaTests/OpenCVCudaTests.vcxproj
@@ -83,14 +83,17 @@
   <ItemGroup>
     <CudaCompile Include="hist_calculation.cu" />
     <CudaCompile Include="hist_equalization.cu" />
+    <CudaCompile Include="invert_color.cu" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Test1.cpp" />
+    <ClCompile Include="Invert_Color.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hist_calculation_CUDA.h" />
     <ClInclude Include="hist_equalization_CUDA.h" />
+    <ClInclude Include="invert_color_CUDA.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
